Functions (Part 1) (#470)
Added functions + function-specific events (e.g. Return and Call)
Simplified BoogieVisitor and related parsing classes.